--- a/templates/fight.html
+++ b/templates/fight.html
@@ -46,7 +46,9 @@
         <div class="row">
           <div class="col align-content-center">
             <p><em>{{ result }}</em></p>
+              {% if battle_result %}
             <p>{{ battle_result }}</p>
+              {% endif %}
           </div>
         </div>
         <hr>
